Spacing fix

--- a/site/src/_styles.css
+++ b/site/src/_styles.css
@@ -90,7 +90,7 @@ a:hover  {
 header {
   width: 100%;
   margin: 0;
-  padding: 2.5rem 0.5rem;
+  padding: 2.5rem 0.75rem;
   background: #fff;
   border-bottom: 1px solid #ddd;
   font-family: 'Avenir Next', 'Avenir Next LT Pro', Montserrat, Corbel, 'Noto Sans', sans-serif;
